--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.6
 Django==5.1.1
 django-crispy-forms==2.3
 django-debug-toolbar==4.4.6
+django-import-export==4.1.1
 iniconfig==2.0.0
 mysql-connector-python==9.0.0
 packaging==24.1
